--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/MMendes24/node-db4-project/issues"
   },
-  "homepage": "https://github.com/MMendes24/node-db4-project#readme"
+  "homepage": "https://github.com/MMendes24/node-db4-project#readme",
+  "dependencies": {
+    "knex": "^0.21.5",
+    "knex-cleaner": "^1.3.1",
+    "sqlite3": "^5.0.0"
+  }
 }
