--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "- database modeling.\r - migration scripts.\r - seeding.\r - knex.",
   "main": "knexfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/MMendes24/node-db4-project#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "knex": "^0.21.5",
     "knex-cleaner": "^1.3.1",
+    "nodemon": "^2.0.4",
     "sqlite3": "^5.0.0"
   }
 }
